--- a/심층신경망정리.ipynb
+++ b/심층신경망정리.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMWIglU7IBJLlESP7tgIlUH",
+      "authorship_tag": "ABX9TyNbNlxPRNEYUWxWqSOaLPTo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,22 +45,22 @@
         "\n",
         "from sklearn.model_selection import train_test_split\n",
         "train_scaled = train_input / 255.0\t# 픽셀 값을 0~1로 변환\n",
-        "train_scaled = train_scaled.reshape(-1, 28*28) 2차원 배열을 1차원 배열로 변환\n",
+        "train_scaled = train_scaled.reshape(-1, 28*28) # 2차원 배열을 1차원 배열로 변환\n",
         "\n",
         "train_scaled, val_scaled, train_target, val_target = train_test_split(\n",
         "    train_scaled, train_target, test_size=0.2, random_state=42)\n",
         "\n",
-        "(방법1)\n",
-        "dense1 = keras.layers.Dense(100, activation = 'sigmoid', input_shape = (784,))\n",
-        "dense2 = keras.layers.Dense(10, activation = 'softmax')\n",
-        "model = keras.Sequential([dense1, dense2])\n",
+        "# (방법1)\n",
+        "# dense1 = keras.layers.Dense(100, activation = 'sigmoid', input_shape = (784,))\n",
+        "# dense2 = keras.layers.Dense(10, activation = 'softmax')\n",
+        "# model = keras.Sequential([dense1, dense2])\n",
         "\n",
-        "(방법2-1)\n",
-        "model = keras.Sequential([\n",
-        "    keras.layers.Dense(100, activation='sigmoid', input_shape=(784,), name='hidden'), # name='hidden' 레이어 이름 정의(영어만!)\n",
-        "    keras.layers.Dense(10, activation='softmax', name='output')], name='패션 MNIST 모델') # 모델의 이름\n",
+        "# (방법2-1)\n",
+        "# model = keras.Sequential([\n",
+        "#     keras.layers.Dense(100, activation='sigmoid', input_shape=(784,), name='hidden'), # name='hidden' 레이어 이름 정의(영어만!)\n",
+        "#     keras.layers.Dense(10, activation='softmax', name='output')], name='패션 MNIST 모델') # 모델의 이름\n",
         "\n",
-        "(방법2-2)\n",
+        "# (방법2-2)\n",
         "model = keras.Sequential()  # 새로운 모델 생성\n",
         "model.add(keras.layers.Dense(100, activation='sigmoid', input_shape=(784,)))\n",
         "model.add(keras.layers.Dense(10, activation='softmax'))\n",
@@ -75,8 +75,7 @@
         "model.evaluate(val_scaled, val_target)\n",
         "\n",
         "\n",
-        "\n",
-        "# -- 2차원 배열로 사용\n",
+        "#### 2차원 배열로 사용\n",
         "\n",
         "import tensorflow as tf\n",
         "\n",
@@ -93,7 +92,7 @@
         "train_scaled, val_scaled, train_target, val_target = train_test_split(\n",
         "    train_scaled, train_target, test_size=0.2, random_state=42)\n",
         "\n",
-        "(방법3)\n",
+        "# (방법3)\n",
         "model = keras.Sequential()\n",
         "model.add(keras.layers.Flatten(input_shape = (28, 28)))\n",
         "model.add(keras.layers.Dense(100, activation='relu'))\n",
